test/fail/bad-heartbeat.mo
//CLASSICAL-PERSISTENCE-ONLY
actor {
  system func heartbeat() : () { // reject, should be async ()
  };
};
